k8s/base/admin-panel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel
  namespace: parktrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-panel
  template:
    metadata:
      labels:
        app: admin-panel
    spec:
      containers:
      - name: admin-panel
        image: ghcr.io/parktrack-project/admin-panel:latest # {"$imagepolicy": "flux-system:admin-panel"}
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: ghcr-credentials
