k8s/base/admin-panel/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-panel-route
  namespace: parktrack
spec:
  parentRefs:
  - name: parktrack-gateway
  hostnames:
  - "admin.parktrack.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: admin-panel
      port: 80
